# rifas

./: API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPER_ONBOARDING.md  Dynames_Prompt_Maestro_Backend_Rifa1122.txt  Dynames_Prompt_Maestro_Rifa1122.txt  PROJECT_OVERVIEW.md  Rifa1122_Ecosistema_Sorteos.xlsx  SETUP_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  estructura_rifa.md
backend/: .dockerignore  .env  .env.example  .env.prod.example  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  initial_data.json  nginx.conf  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 273499e3b2be_initial_migration.py  8cdd12475275_add_categoria_rifa_table.py
backend/app/: main.py
backend/app/api/v1/: api.py  deps.py
backend/app/core/: celery_app.py  config.py  logging.py  rate_limiting.py  security.py
backend/app/db/: session.py
backend/app/models/: categoria.py  categoria_rifa.py  ganador.py  loteria.py  rifa.py  ticket.py  transaccion.py  user.py
backend/app/repositories/: base.py  rifa_repository.py  ticket_repository.py  transaccion_repository.py
backend/app/schemas/: auth.py  categoria.py  categoria_rifa.py  ganador.py  loteria.py  rifa.py  ticket.py  transaccion.py  user.py
backend/app/services/: purchase_service.py  rifa_service.py  stripe_service.py
backend/app/tests/: conftest.py
backend/app/workers/: tasks.py
backend/nginx/: nginx.conf
backend/scripts/: backup.sh
rifa1122/: README.md  pubspec.yaml  (+1 more)
(+70 files in other folders)
