[tool.poetry]
name = "rifa1122-backend"
version = "0.1.0"
description = "Backend API for Rifa1122 lottery system"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.109.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = ">=0.0.18"
redis = "^5.0.1"
celery = "^5.3.4"
stripe = "^7.4.0"
httpx = "^0.25.2"
structlog = "^23.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.38.0"}
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.0.0"
slowapi = "^0.1.9"
starlette = ">=0.49.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-postgresql = "^5.0.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.1.6"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core/build-backend"
